# thesentinelreview

./: .gitignore  ARCHITECTURE.md  AUDIT_2026-05-30.md  CLAUDE.md  DASHBOARD_HANDOFF.md  DEPLOY.md  HANDOFF-2026-05-16.md  HANDOFF.md  HANDOFF_2026-05-18.md  HANDOFF_2026-05-19_source_feed.md  HANDOFF_2026-05-20_supabase.md  HANDOFF_2026-05-21.md  HANDOFF_2026-05-28_rogue_neon_backfill.md  HANDOFF_2026-05-29.md  OPS_LOG.md  SESSION_HANDOFF_2026-05-15.md  _redirects  aggregate.py  backfill_neon_to_supabase.py  feed.xml  generate_briefing.py  index.html  legal.html  post_to_x.py  posted_state.json  pricing.html  privacy-policy.html  readme.md  relevance_filter.py  requirements.txt  sentinel-intel-dashboard-whitepaper.docx  sentinel_review_dashboard.html  sentinel_review_handoff.md  site.webmanifest  template.html  terms-of-use.html  verification-diagnostic.md  wrangler.jsonc
.github/workflows/: bluesky-feed-debug.yml  briefing.yml  ci-ingest-tests.yml  ci-ingest.yml  ci-migrations.yml  main.yml  publish-pdf.yml  python-ci.yml  sentinel-api-smoke.yml  sentinel-backfill-confidence.yml  sentinel-backfill-translations.yml  sentinel-backfill-weapon-type.yml  sentinel-briefing.yml  sentinel-cadence-watchdog.yml  sentinel-db-backup.yml  sentinel-discover.yml  sentinel-drain-extraction.yml  sentinel-dryrun-weapon-type.yml  sentinel-ingest.yml  sentinel-integrity.yml  sentinel-neon-backfill.yml  sentinel-probe-feeds.yml
apps/bsky-osint/: .gitignore  README.md  config.yaml  pyproject.toml
apps/bsky-osint/data/: seed_handles.csv
apps/bsky-osint/src/bsky_osint/: __init__.py  bluesky_client.py  cli.py  config.py  discovery.py  exporters.py  llm_enricher.py  models.py  safety.py  scoring.py  utils.py
apps/bsky-osint/tests/: test_exporters.py  test_llm_enricher.py  test_query_builder.py  test_safety.py  test_scoring.py
apps/ingest/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.toml  setup_telegram_session.py
apps/ingest/scripts/neon_backfill_2026_05/: .gitignore  README.md  backfill_rogue_neon.py  build_mcp_batches.py  build_probe_sql.py  neon_backfill_payload.json  source_id_remap.json
apps/ingest/sentinel/: checks.py  config.py  db.py  models.py  preflight.py  probe_feeds.py  runner.py  scheduler.py  worker.py
apps/ingest/sentinel/ingestors/: base.py  bluesky.py  gdelt.py  rss.py  telegram.py  x.py
apps/ingest/sentinel/jobs/: discover_candidates.py  extract_events.py  generate_briefing.py  ingest_source.py
apps/ingest/sentinel/pipeline/: TRANSLATOR_SPEC.md  briefing.py  confidence_backfill.py  dedup.py  extractor.py  geocode_precision.py  scorer.py  theater_relabel.py  theater_router.py  translation_backfill.py  translator.py  weapon_type_backfill.py  weapon_type_dryrun.py
apps/ingest/sentinel/scripts/: debug_author_feed.py
apps/ingest/tests/: conftest.py  test_bluesky.py  test_briefing.py  test_checks_silence.py  test_confidence_backfill.py  test_confidence_upgrade.py  test_dedup.py  test_dedup_instrumentation.py  test_extract_events.py  test_extractor.py  test_gdelt.py  test_generate_briefing.py  test_geocode_precision.py  test_ingest_source_stamp.py  test_rss.py  test_runner_fail_loud.py  test_scheduler_backoff.py  test_scorer.py  test_source_health.py  test_telegram.py  test_translation_backfill.py  test_translator.py  test_translator_live.py  test_weapon_type_backfill.py  test_x.py
apps/web/: .env.example  CLAUDE.md  DESIGN.md  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  vercel.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.module.css  page.tsx  robots.ts  sitemap.ts
apps/web/app/about/: error.tsx  page.module.css  page.tsx
apps/web/app/account/: ApiKeyManager.tsx  page.tsx
apps/web/app/app/: page.tsx
apps/web/app/methodology/: page.module.css  page.tsx
apps/web/app/pricing/: CheckoutButton.tsx  ManageBillingButton.tsx  page.tsx  pricing.module.css
apps/web/app/privacy/: page.tsx
apps/web/app/sources/: error.tsx  page.module.css  page.tsx
apps/web/app/styleguide/: page.tsx
apps/web/components/: DemoBanner.tsx  GeoSearch.tsx  GlobalFooter.tsx  GlobalHeader.tsx  MapView.tsx  MapWrapper.tsx  PostCard.module.css  PostCard.tsx  SearchBox.tsx  ShareButton.tsx  SiteHeader.tsx  SiteNav.module.css  SiteNav.tsx  SuccessBanner.tsx
apps/web/data/: placeholder.ts  theaters.ts
apps/web/lib/: account.test.ts  account.ts  api-v1-core.test.ts  api-v1-core.ts  api-v1.ts  auth.ts  briefing-format.test.ts  briefing-format.ts  cn.ts  day-groups.ts  db.ts  entitlements-core.test.ts  entitlements-core.ts  entitlements.ts  env.ts  exports-core.test.ts  exports-core.ts  queries.ts  stripe.test.ts  stripe.ts  text.ts  types.ts
apps/web/scripts/: download-fonts.cjs
docs/: RESTORE.md  session-handoff-2026-05-15.md
docs/diagnostics/: 2026-05-25-ingestion-audit.md  2026-06-09-bug-sweep.md  2026-06-10-phase0-verification.md  2026-06-13-bug-sweep.md
legacy/: posted_state.json  requirements.txt  sentinel_review_dashboard.html  sentinel_review_handoff.md  template.html
sentinel-shield/: .env.example  QUICKSTART.md  docker-compose.yml
sentinel-shield/.github/workflows/: correlate.yml  feed-sync.yml
sentinel-shield/agent/: pyproject.toml
sentinel-shield/agent/sentinel_agent/: collector.py  config.py  main.py  reporter.py
sentinel-shield/apps/dashboard/: Dockerfile  next.config.ts  package.json
sentinel-shield/apps/workers/: pyproject.toml
sentinel-shield/apps/workers/shield/: cli.py  config.py  db.py  models.py  worker.py
sentinel-shield/apps/workers/shield/ai/: investigate.py  triage.py
sentinel-shield/apps/workers/shield/detection/: correlator.py  yara_engine.py
sentinel-shield/apps/workers/shield/feeds/: __init__.py  abuse_ch.py  base.py  mitre.py  nvd.py  phishing.py
sentinel-shield/apps/workers/shield/jobs/: ingest_feed.py  update_baselines.py
sentinel-shield/apps/workers/shield/playbooks/: engine.py
sentinel-shield/apps/workers/shield/playbooks/definitions/: malware_auto_response.json
sentinel-shield/db/migrations/: 0001_init.sql
sentinel-shield/db/seed/: seed.sql
(+136 files in other folders)
