[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bsky-osint"
version = "0.1.0"
description = "Bluesky conflict & national security OSINT source discovery"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.9",
    "typer>=0.13",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "rich>=13.0",
    "diskcache>=5.6",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "anthropic>=0.30",
]

[project.scripts]
bsky-osint = "bsky_osint.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/bsky_osint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
