[project]
name = "sentinel-ingest"
version = "0.1.0"
description = "Sentinel Review — OSINT ingestion and LLM processing workers"
requires-python = ">=3.11"

dependencies = [
    # Database
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",

    # HTTP + feeds
    "httpx>=0.27",
    "feedparser>=6.0",

    # LLM
    "anthropic>=0.40",

    # Config + validation
    "pydantic>=2.9",
    "pydantic-settings>=2.5",

    # Logging
    "structlog>=24.4",

    # Retry logic
    "tenacity>=9.0",

    # Bluesky AT Protocol
    "atproto>=0.0.51",
]

[project.optional-dependencies]
telegram = [
    "telethon>=1.36",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.32",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
sentinel-worker = "sentinel.worker:main"
sentinel-scheduler = "sentinel.scheduler:main"
sentinel-preflight = "sentinel.preflight:verify_database_target"
sentinel-run-ingest = "sentinel.runner:run_ingest"
sentinel-run-briefing = "sentinel.runner:run_briefing"
sentinel-run-checks = "sentinel.runner:run_checks"
sentinel-run-backfill-translations = "sentinel.runner:run_backfill_translations"
sentinel-run-weapon-type-dryrun = "sentinel.runner:run_dryrun_weapon_type"
sentinel-run-backfill-weapon-type = "sentinel.runner:run_backfill_weapon_type"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

# Long LLM system prompts are written as multi-thousand-character single-line
# string literals — they are prose-as-code and don't wrap meaningfully.
# Suppressing E501 here only; the global line-length rule still applies elsewhere.
[tool.ruff.lint.per-file-ignores]
"sentinel/pipeline/extractor.py" = ["E501"]
"sentinel/pipeline/translator.py" = ["E501"]
"sentinel/pipeline/briefing.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
