[project]
name = "sentinel-ingest"
version = "0.1.0"
description = "Sentinel Review — OSINT ingestion and LLM processing workers"
requires-python = ">=3.11"

dependencies = [
    # Database
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",

    # HTTP + feeds
    "httpx>=0.27",
    "feedparser>=6.0",

    # LLM
    "anthropic>=0.40",

    # Config + validation
    "pydantic>=2.9",
    "pydantic-settings>=2.5",

    # Logging
    "structlog>=24.4",

    # Retry logic
    "tenacity>=9.0",

    # Bluesky AT Protocol
    "atproto>=0.0.51",
]

[project.optional-dependencies]
telegram = [
    "telethon>=1.36",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.32",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
sentinel-worker = "sentinel.worker:main"
sentinel-scheduler = "sentinel.scheduler:main"
sentinel-preflight = "sentinel.preflight:verify_database_target"
sentinel-run-ingest = "sentinel.runner:run_ingest"
sentinel-run-briefing = "sentinel.runner:run_briefing"
sentinel-run-checks = "sentinel.runner:run_checks"
sentinel-run-backfill-translations = "sentinel.runner:run_backfill_translations"
sentinel-run-weapon-type-dryrun = "sentinel.runner:run_dryrun_weapon_type"
sentinel-run-backfill-weapon-type = "sentinel.runner:run_backfill_weapon_type"
sentinel-run-drain-extraction = "sentinel.runner:run_drain_extraction"
sentinel-probe-feeds = "sentinel.runner:run_probe_feeds"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E501 (line too long) is intentionally ignored: this codebase carries long
# LLM system prompts (sentinel/pipeline/briefing.py, extractor.py) and SQL
# strings whose wrapping costs more than it saves. Audit AUDIT_2026-05-30.md
# logs this as a future per-fix cleanup decision, not a CI gate.
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
