[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "psutil>=6.0",
    "watchdog>=4.0",
    "httpx>=0.27",
    "tenacity>=9.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "yara-python>=4.5",
]

[project.optional-dependencies]
windows = ["pywin32>=306"]

[project.scripts]
sentinel-agent = "sentinel_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["sentinel_agent"]
