[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shield-workers"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "anthropic>=0.40",
    "httpx>=0.27",
    "structlog>=24.4",
    "tenacity>=9.0",
    "yara-python>=4.5",
    "feedparser>=6.0",
    "bcrypt>=4.1",
    "geoip2>=4.8",
]

[project.scripts]
shield-worker    = "shield.cli:worker"
shield-scheduler = "shield.cli:scheduler"
shield-ingest    = "shield.cli:ingest"

[tool.hatch.build.targets.wheel]
packages = ["shield"]
